--- a/templates/professor.html
+++ b/templates/professor.html
@@ -8,6 +8,8 @@
 
 {% block conteudo %}
 
+<section class="cadastro_turma">
+
     <div class="titulomensagem">
         <h2>Cadastre sua turma no Banco de Dados</h2>
     </div>
@@ -16,6 +18,9 @@
         <input type="text" placeholder="Nome da Turma" name="nomeTurma">
         <button type="submit">ENVIAR</button>
     </form>
+
+</section>
+
 
 
 
