--- a/static/styles/media/login-media.css
+++ b/static/styles/media/login-media.css
@@ -37,8 +37,19 @@
         width: 80%;
     }
 
+    .login-box{
+        border-radius: 1.5rem;
+        padding: 1.5rem;
+        width: 40rem;
+        height: 40rem;
+    }
+
+    .login-box h2{
+        font-size: 3.5rem;
+    }
+
     .login-prompt{
-        margin-bottom: 3rem;
+        margin-bottom: 4.5rem;
     }
 
     .login-btn{
