--- a/static/styles/media/pagina-inicial-media.css
+++ b/static/styles/media/pagina-inicial-media.css
@@ -1,14 +1,27 @@
 /* Media de telas para smartphones */
 @media (max-width: 576px){
 
-
     .titulo-destaque .part1{
         font-size: 3.5rem;
-        margin-left: 0.5rem;
+        margin-left: 1.3rem;
     }
 
     .titulo-destaque .part2{
         font-size: 3.5rem;
+    }
+
+    .shape {
+        height: 2.5rem;
+        width: 2.5rem;
+        z-index: 0;
+        margin-left: 0.2rem;
+    }
+
+    .titulo-destaque .partG {
+        font-size: 3.5rem;
+        opacity: 0.7;
+        margin-left: 0.2rem;
+        z-index: 0;
     }
 
     .container-grid{
@@ -46,39 +59,54 @@
         height: 11rem;
     }
 
-    .titulomensagem-prof{
-        margin-top: 15rem;
-        margin-bottom: 7rem;
-    }
-
-    .titulomensagem-prof h2{
-        font-size: 2rem;
-    }
-
     .container-mensagem_professor{
-        height: 20vh;
-        width: 60vw;
-        margin-left: 4.5rem;
+        margin-top: 15rem;
+        height: 25rem;
+        width: 20rem;
+        justify-content: flex-start;
+        margin-left: 3rem;
     }
 
     .mensagem p{
         font-size: 1rem;
+        text-align: center;
     }
 
     .mensagem{
-        width: 60vw;
-        height: 20vh;
+        width: 70vw;
+        height: 25vh;
         margin-top: 1rem;
         margin-top: 3rem;
-        margin-bottom: 14rem;
+        margin-bottom: 8rem;
         border-radius: 2rem;
     }
-
 
 }
 
 /* Media de telas para Tablets */
 @media (min-width: 768px) {
+
+    .titulo-destaque .part1{
+        font-size: 9rem;
+        margin-left: 2rem;
+    }
+
+    .titulo-destaque .part2{
+        font-size: 9rem;
+    }
+
+    .shape {
+        height: 6.5rem;
+        width: 6.5rem;
+        margin-left: 0.2rem;
+    }
+
+    .titulo-destaque .partG {
+        font-size: 9rem;
+        opacity: 0.7;
+        margin-left: 0.2rem;
+        z-index: 0;
+    }
 
     .container-cadastramento{
         gap: 20rem;
@@ -90,7 +118,9 @@
 
     }   
 
+
     .c-galeria{
+      
         margin-top: 4rem;
         margin-right: 10rem;
         grid-row-gap: 7rem;
@@ -115,16 +145,6 @@
         height: 20rem;
     }
 
-    .titulomensagem-prof{
-        margin-top: 5rem;
-        margin-bottom: 7rem;
-    }
-
-    .titulomensagem-prof h2{
-        font-size: 3rem;
-        margin-bottom: 2rem;
-    }
-
     .container-mensagem_professor{
         height: 25vh;
         width: 60vw;
@@ -139,8 +159,69 @@
         width: 60vw;
         height: 25vh;
         margin-top: 4rem;
-        margin-top: 3rem;
-        margin-bottom: 16rem;
+        margin-bottom: 20rem;
+        border-radius: 2rem;
+    }
+
+
+}
+
+@media (min-width: 1200px){
+
+    .titulo-destaque .part1{
+        font-size: 9rem;
+        margin-left: 2rem;
+    }
+
+    .titulo-destaque .part2{
+        font-size: 9rem;
+    }
+
+    .shape {
+        height: 6.5rem;
+        width: 6.5rem;
+        margin-left: 0.2rem;
+    }
+
+    .titulo-destaque .partG {
+        font-size: 9rem;
+        opacity: 0.7;
+        margin-left: 0.2rem;
+        z-index: 0;
+    }
+
+    .container-cadastramento{
+        gap: 20rem;
+    }
+
+    .cadastramento-titulo span{
+        font-size: 2.5rem;
+        margin-left: 10rem;
+
+    }   
+
+    .servicos{
+        /*LARGURA DO CARD.*/
+        width: 100%;
+        /*COR DE FUNDO DO CARD*/
+        height: 100%;
+    }
+
+
+    .container-mensagem_professor{
+        margin-left: 16.5rem;
+        margin-top: 5rem;
+    }
+
+    .mensagem p{
+        font-size: 2rem;
+    }
+
+    .mensagem{
+        width: 50vw;
+        height: 30vh;
+        margin-top: 6rem;
+        margin-bottom: 28rem;
         border-radius: 2rem;
     }
 
@@ -148,34 +229,52 @@
 }
 
 @media (min-width: 1440px){
-    .titulomensagem-prof{
-        margin-top: 4.5rem;
-        margin-bottom: 10rem;
-      }
       
-      .titulomensagem-prof h2{
-        font-size: 3.5rem;
-        margin-bottom: 4rem;
-      }
-      
-      
-      .container-mensagem_professor{
-        height: 30vh;
-        width: 40vw;
-        margin-left: 29rem;
-      }
-      
-      
-      .mensagem p{
+    .titulo-destaque .part1{
+        font-size: 19.5rem;
+        margin-left: 2rem;
+    }
+
+    .titulo-destaque .part2{
+        font-size: 19.5rem;
+    }
+
+    .shape {
+        height: 13rem;
+        width: 13rem;
+        margin-left: 0.2rem;
+    }
+
+    .titulo-destaque .partG {
+        font-size: 19.5rem;
+        opacity: 0.7;
+        margin-left: 0.2rem;
+        z-index: 0;
+    }
+
+    .servicos{
+        /*LARGURA DO CARD.*/
+        width: 100%;
+        /*COR DE FUNDO DO CARD*/
+        height: 100%;
+    }
+
+    .container-mensagem_professor{
+        height: 30rem;
+        width: 40rem;
+        margin-left: 2rem;
+    }
+    
+    .mensagem p{
         font-size: 1.6rem;
-      }
-      
-      .mensagem{
-        width:  40vw;
-        height: 30vh;
-        margin-top: 1rem;
-        margin-top: 3rem;
-        margin-bottom: 20rem;
-      }
+    }
+    
+    .mensagem{
+        width:  40rem;
+        height: 20rem;
+        margin-top: 2rem;
+        margin-bottom: 10rem;
+        margin-left: 55rem;
+    }
 }
 
