--- a/static/styles/rnc.css
+++ b/static/styles/rnc.css
@@ -6,11 +6,13 @@ body{
     background-color: var(--cor-fundo-pg-funcoes);
 }
 
-.geral-cadastramento{
+
+.geral-cadastramento {
+    margin-top: 10rem; /* Dar um espaço após o header */
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
 }
 
 .container-cadastramento{
@@ -41,6 +43,9 @@ body{
 
 .formulario{
     margin: 9rem 38rem;
+    margin-top: 10rem; /* Espaço adicional após o header */
+    padding: 20px;
+    background-color: var(--form-background-color);
 }
   
 .form_container {
@@ -54,7 +59,7 @@ body{
     
 }
 
-.input-field, .textarea-field, .select-menu, .submit-btn {
+.table, .input-field, .textarea-field, .select-menu, .submit-btn {
     width: 100%;
     margin-bottom: 15px;
     padding: 12px;
@@ -62,6 +67,11 @@ body{
     border: 1px solid var(--cor-bordas);
     border-radius: 4px;
     background-color: var(--cor-fundo-formularios);
+    background-color: var(--input-bg-light);
+}
+
+body.dark .table, body.dark .input-field, body.dark .textarea-field {
+    background-color: var(--input-bg-dark);
 }
 
 .textarea-field {
@@ -149,4 +159,14 @@ th, td {
 
 th {
     background-color: #f2f2f2;
+}
+
+.theme-container.light {
+    background-color: var(--primary-color-light);
+    color: var(--text-color-light);
+}
+
+.theme-container.dark {
+    background-color: var(--primary-color-dark);
+    color: var(--text-color-dark);
 }
