--- a/templates/picking.html
+++ b/templates/picking.html
@@ -25,6 +25,39 @@
         <div class="container-img"></div>
     </div>
 
+    <!-- Status do Produto -->
+    <section class="formulario">
+        <div class="tracking-container">
+            <p class="status">Status do Produto</p>
+            <div class="tracking-steps">
+                <div class="step active">
+                    <div class="icon-box">
+                        <i class="fa-solid fa-box-open"></i>
+                    </div>
+                    <p>Produto em Mãos</p>
+                </div>
+                <div class="step active">
+                    <div class="icon-box">
+                        <i class="fa-regular fa-clipboard"></i>
+                    </div>
+                    <p>Cadastramento</p>
+                </div>
+                <div class="step">
+                    <div class="icon-box">
+                        <i class="fa-regular fa-note-sticky"></i>
+                    </div>
+                    <p>Separação</p>
+                </div>
+                <div class="step">
+                    <div class="icon-box">
+                        <i class="fa-solid fa-truck-fast"></i>
+                    </div>
+                    <p>Concluído!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="container-tabela">
         <h1>Produtos Cadastrados</h1>
         <table>
