--- a/templates/cadastramento.html
+++ b/templates/cadastramento.html
@@ -13,6 +13,10 @@
     <!-- LINK PARA O JAVASCRIPT(FUNCIONALIDADE)   -->
     <script src="/static/js/cadastramento.js" defer></script>
 
+    <div id="successMessage" style="display: none;" class="alert">
+        <span class="alert-icon">✔️</span>
+        <span class="alert-text">Processo concluído com sucesso!</span>
+    </div>
 
     <section class="geral-cadastramento">
 
@@ -37,7 +41,7 @@
                         </div>
                         <p>Produto em mãos</p>
                     </div>
-                    <div class="step">
+                    <div class="step active">
                         <div class="icon-box">
                             <i class="fa-regular fa-clipboard"></i>
                         </div>
@@ -49,10 +53,6 @@
                         </div>
                         <p>Concluído!</p>
                     </div>
-                </div>
-                <div id="successMessage" style="display: none;" class="alert">
-                    <span class="alert-icon">✔️</span>
-                    <span class="alert-text">Processo concluído com sucesso!</span>
                 </div>
             </div>
 
