--- a/templates/simulador.html
+++ b/templates/simulador.html
@@ -2,8 +2,9 @@
 
 {% block css %}
 <link rel="stylesheet" href="/static/styles/media/layout-media.css">
-<link rel="stylesheet" href="/static/styles/login.css">
+<link rel="stylesheet" href="/static/styles/simulador.css">
 <link rel="stylesheet" href="/static/styles/variaveis.css">
+<script src="https://kit.fontawesome.com/cbfeaec436.js" crossorigin="anonymous"></script>
 {% endblock %}
 
 {% block conteudo %}
@@ -12,7 +13,7 @@
     
     
     <div class="empresa">
-        <h2>Empresa: {{ pedido['fabricante'] }} </h2>
+        <h2><i class="fa-solid fa-building"></i> Empresa: {{ pedido['fabricante'] }} </h2>
         <p>Código do Pedido: {{ pedido['codigo'] }}</p>
     </div>
 <!-- 
