--- a/static/styles/expedicao.css
+++ b/static/styles/expedicao.css
@@ -39,7 +39,7 @@ body{
 
 
 .formulario{
-    margin-left: 26.5rem;
+    /* margin-left: 26.5rem; */
     margin-top: 8rem;
     margin-bottom: 10rem;
 }
