--- a/templates/expedicao.html
+++ b/templates/expedicao.html
@@ -29,7 +29,7 @@
 
         </div>
 
-        </section>
+        
 
         <section class="container-tabela">
             <h1>Produtos Cadastrados</h1>
@@ -62,7 +62,7 @@
     <!-- Section 02. Formulário de Cadastro de Expedição
     Section que contém o formulário composto por inputs. Foi utilizado "text" para dados escritos e "date" para datas. Na descrição técnica, optamos por textarea
     porque facilita a inserção de textos extensos. -->
-        <section class="formulario">
+        <div class="formulario">
 
             <div class="form_container">
 
@@ -88,7 +88,7 @@
 
             </div>
 
-        </section>
+        </div>
 
     </section>
 
