--- a/static/styles/media/mensagem-media.css
+++ b/static/styles/media/mensagem-media.css
@@ -2,8 +2,8 @@
 @media (max-width: 576px){
 
     .titulomensagem h2{
-        margin-top: 2rem;
-        margin-bottom: 2rem;
+        margin-top: 6rem;
+        margin-bottom: 1rem;
         font-size: 2rem;  
         text-align: center;
     }
@@ -11,16 +11,31 @@
 
     input {
         display: flex;
-        margin-left: 2rem;
-        width: 80%;
+        margin-left: 4.5rem;
+        width: 60%;
         margin-bottom: 1rem;
+    }
+
+    input::placeholder{
+        font-size: 1rem;
+    }
+
+
+    .textarea-mensagem{
+        width: 60%;
+        margin-bottom: 0.5rem;
+        margin-left: 4.5rem;
+        padding:1rem;
+        font-size: 1rem;
+        border-radius: 0.7rem;
     }
 
 
     button[type="submit"] {
-        width: 80%;
-        margin-left:2rem;
+        width: 40%;
+        margin-left:6.5rem;
         padding: 1rem;
+        margin-bottom: 1.5rem;
     }
 
 
@@ -39,13 +54,75 @@
 
     input {
         display: flex;
-        width: 100%;
-        margin-bottom: 2rem;
+        margin-left: 1.5rem;
+        width: 90%;
+        margin-bottom: 1rem;
+    }
+
+    input::placeholder{
+        font-size: 1.3rem;
+    }
+
+
+    .textarea-mensagem{
+        width: 90%;
+        margin-bottom: 0.5rem;
+        margin-left: 1.5rem;
+        padding:1rem;
+        font-size: 1rem;
+        border-radius: 0.7rem;
     }
 
 
     button[type="submit"] {
+        width: 50%;
+        margin-left: 8rem;
+        font-size: 1.3rem;
+    }
+
+}
+
+/* Media de telas para Desktop */
+@media (min-width: 1200px){
+    .titulomensagem h2{
+        margin-bottom: 4rem;
+        font-size: 2.5rem;  
+    }
+
+    input {
         width: 100%;
     }
+
+    input::placeholder{
+        font-size: 1.3rem;
+    }
+
+
+    .textarea-mensagem{
+        width: 100%;
+        font-size: 1.3rem;
+        margin-bottom: 1rem;
+    }
+
+
+    button[type="submit"] {
+        width: 60%;
+        margin-left: 8.8rem;
+        font-size: 1.3rem;
+    }
+}
+
+/* Media de telas para Desktop */
+@media (min-width: 1440px){
+    .titulomensagem h2{
+        margin-bottom: 4.5rem;
+        font-size: 3rem;  
+    }
+
+
+    input::placeholder{
+        font-size: 1.5rem;
+    }
+
 
 }
