--- a/templates/professor.html
+++ b/templates/professor.html
@@ -12,6 +12,7 @@
 
     <div class="titulomensagem">
         <h2>Cadastre sua turma no Banco de Dados</h2>
+        <p>A turma deve ser cadastrada sem espaços!</p>
     </div>
 
     <form action="/criarBD" method="POST">
