--- a/static/styles/media/professor-media.css
+++ b/static/styles/media/professor-media.css
@@ -2,9 +2,14 @@
 @media (max-width: 576px) {
 
     .titulomensagem h2{
-        margin-bottom: 3rem;
+        margin-bottom: 1rem;
         font-size: 1.5rem;  
         text-align: center;
+    }
+
+    .titulomensagem p{
+        font-size: 1rem;
+        margin-bottom: 1.2rem;
     }
     
     
@@ -19,8 +24,8 @@
     
     
     button[type="submit"] {
-        width: 60%;
-        margin-left: 4.5rem;
+        width: 50%;
+        margin-left: 5.5rem;
     }
     
 
@@ -30,25 +35,84 @@
 @media (min-width: 768px){
 
     .titulomensagem h2{
-        margin-bottom: 4rem;
+        margin-bottom: 2rem;
         font-size: 2.5rem;  
         text-align: center;
     }
+
+    .titulomensagem p{
+        font-size: 1.3rem;
+        margin-bottom: 1.5rem;
+    }
+    
     
     
     input {
         padding: 1rem;
         width: 80%;
-        outline: none;
         margin-bottom: 1rem;
         margin-left: 3.5rem;
         text-align: center;
     }
+
+    input::placeholder{
+        font-size: 1.3rem;
+    }
     
     
     button[type="submit"] {
-        width: 80%;
-        margin-left: 3.5rem;
+        width: 50%;
+        margin-left: 8.5rem;
+    }
+
+}
+
+/* Media de telas para Desktop */
+@media (min-width: 1200px){
+
+    .titulomensagem h2{
+        margin-bottom: 1.6rem;
+        font-size: 3rem;  
+    }
+
+    .titulomensagem p{
+        font-size: 1.3rem;
+        margin-bottom: 1.5rem;
+    }
+    
+    
+    input {
+        width: 90%;
+        margin-left: 2.5rem;
+    }
+    
+    input::placeholder{
+        font-size: 1.3rem;
+    }
+    
+    button[type="submit"] {
+        width: 60%;
+        margin-left: 7.5rem;
+        font-size: 1.2rem;
+    }
+
+}
+
+/* Media de telas para Desktop */
+@media (min-width: 1440px){
+
+    .titulomensagem h2{ 
+        font-size: 3.5rem;  
+    }
+
+    .titulomensagem p{
+        font-size: 1.4rem;
+        margin-bottom: 1.5rem;
+    }
+    
+    input {
+        width: 100%;
+        margin-left: 1rem;
     }
 
 }
