--- a/static/styles/rnc.css
+++ b/static/styles/rnc.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
 
 
-
 body{
     background-color: var(--cor-fundo-pg-funcoes);
+    overflow-x: hidden;
 }
 
 
 .geral-cadastramento {
-    margin-top: 10rem; /* Dar um espaço após o header */
+    margin-top: 4rem; /* Dar um espaço após o header */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,7 +26,6 @@ body{
 
 .cadastramento-titulo span{
     font-size: 3.5rem;
-    color: #000000;
     margin-left: 0.5rem;
     opacity: 0.7;
 }
@@ -59,19 +58,15 @@ body{
     
 }
 
-.table, .input-field, .textarea-field, .select-menu, .submit-btn {
+.input-field, .textarea-field, .select-menu, .submit-btn {
     width: 100%;
     margin-bottom: 15px;
     padding: 12px;
     font-size: 16px;
     border: 1px solid var(--cor-bordas);
     border-radius: 4px;
-    background-color: var(--cor-fundo-formularios);
-    background-color: var(--input-bg-light);
-}
-
-body.dark .table, body.dark .input-field, body.dark .textarea-field {
-    background-color: var(--input-bg-dark);
+    background-color: var(--primary-color-light);
+   
 }
 
 .textarea-field {
@@ -106,7 +101,7 @@ body.dark .table, body.dark .input-field, body.dark .textarea-field {
     width: 100%;
     padding: 0;
     list-style: none;
-    background-color: var(--cor-fundo-options);
+    background-color: var(--primary-color-light);
     border: 1px solid var(--cor-bordas);
     border-radius: 4px;
     max-height: 150px;
@@ -131,17 +126,25 @@ body.dark .table, body.dark .input-field, body.dark .textarea-field {
 
 .submit-btn {
     background-color: var(--cor-btn-enviar);
-    color: var(--cor-fundo-options);
+    color: var(--primary-color-light);
     border: none;
     cursor: pointer;
     transition: 0.3s;
 }
 
 .submit-btn:hover {
-    background-color: var(#4a148c);
+    background-color:var(--cor-hover-btn-enviar);
 }
 
+.container-tabela{
+    margin-top: 5rem;
+    width: 50%;
 
+}
+
+.container-tabela h2{
+    font-size: rem;
+}
 
 table {
     width: 100%;
@@ -153,20 +156,10 @@ table, th, td {
 }
 
 th, td {
-    padding: 8px;
+    padding: 1rem;
     text-align: left;
 }
 
 th {
     background-color: #f2f2f2;
-}
-
-.theme-container.light {
-    background-color: var(--primary-color-light);
-    color: var(--text-color-light);
-}
-
-.theme-container.dark {
-    background-color: var(--primary-color-dark);
-    color: var(--text-color-dark);
 }
