--- a/templates/pagina-inicial.html
+++ b/templates/pagina-inicial.html
@@ -115,14 +115,14 @@
 
     <div class="container-mensagem_professor">
 
-        <div class="mensagem">
+        <div class="mensagem_prof">
             <div class="mensagem">
                 {% for mensagem in lista_mensagens %}
                 <p>{{ mensagem['mensagem'] }}</p>
                 {% if "professor_logado" in session %}
                 <form action="{{ url_for('excluir_mensagem') }}" method="POST">
                     <input type="hidden" name="mensagem_id" value="{{ mensagem['cod_mensagem'] }}">
-                    <button type="submit">EXCLUIR MENSAGEM</button>
+                    <button type="submit" class="btn-excluir">EXCLUIR MENSAGEM</button>
                 </form>
                 {% endif %}
                 {% endfor %}
