--- a/templates/listar_bancos.html
+++ b/templates/listar_bancos.html
@@ -10,7 +10,7 @@
 {% block conteudo %}
 
 <section class="gerenciador">
-    <h2>Lista de Bancos de Dados</h2>
+    <h2>Lista das suas turmas</h2>
     <table>
         <thead>
             <tr>
