--- a/templates/professor.html
+++ b/templates/professor.html
@@ -11,7 +11,7 @@
 <section class="cadastro_turma">
 
     <div class="titulomensagem">
-        <h2>Cadastre sua turma no Banco de Dados</h2>
+        <h2>Cadastre sua turma</h2>
         <p>A turma deve ser cadastrada sem espaços!</p>
     </div>
 
