--- a/templates/estoque.html
+++ b/templates/estoque.html
@@ -27,7 +27,7 @@
         </div>
 
 
-        <section class="container-tabela">
+        <!-- <section class="container-tabela">
             <h1>Produtos Cadastrados</h1>
             <table>
                 <thead>
@@ -53,7 +53,7 @@
                     {% endfor %}
                 </tbody>
             </table>
-        </section>
+        </section> -->
     
     <!-- Section 02. Formulário do CONTROLE DE ESTOQUE
     Section que contém o formulário composto por inputs. Foi utilizado "number" para os dados numéricos, "text" para dados escritos e "date" para datas. Na descrição técnica, optamos por textarea
