--- a/templates/expedicao.html
+++ b/templates/expedicao.html
@@ -31,7 +31,7 @@
 
         </section>
 
-        <section class="container-tabela">
+        <!-- <section class="container-tabela">
             <h1>Produtos Cadastrados</h1>
             <table>
                 <thead>
@@ -57,7 +57,7 @@
                     {% endfor %}
                 </tbody>
             </table>
-        </section>
+        </section> -->
     
     <!-- Section 02. Formulário de Cadastro de Expedição
     Section que contém o formulário composto por inputs. Foi utilizado "text" para dados escritos e "date" para datas. Na descrição técnica, optamos por textarea
