--- a/templates/picking.html
+++ b/templates/picking.html
@@ -59,7 +59,7 @@
         </div>
     </section>
 
-    <section class="container-tabela">
+    <!-- <section class="container-tabela">
         <h1>Produtos Cadastrados</h1>
         <table>
             <thead>
@@ -85,7 +85,7 @@
                 {% endfor %}
             </tbody>
         </table>
-    </section>
+    </section> -->
 
 
     <div class="formulario">
