--- a/templates/rnc.html
+++ b/templates/rnc.html
@@ -26,7 +26,7 @@
             <div class="container-img"></div>
         </div>
 
-        <section class="container-tabela">
+        <!-- <section class="container-tabela">
             <h1>Produtos Cadastrados</h1>
             <table>
                 <thead>
@@ -52,7 +52,7 @@
                     {% endfor %}
                 </tbody>
             </table>
-        </section>
+        </section> -->
 
 
         <div class="formulario">
