--- a/static/styles/confirmacao.css
+++ b/static/styles/confirmacao.css
@@ -71,7 +71,7 @@ body {
     margin: 0.5rem;
 }
 
-.green-circle, .red-circle {
+/* .green-circle, .red-circle {
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -83,7 +83,7 @@ body {
 
 .red-circle {
     background-color: #ef5350;
-}
+} */
 
 .fa-circle-xmark {
     color: #66bb6a;
