--- a/templates/layout.html
+++ b/templates/layout.html
@@ -86,13 +86,13 @@
 
                             {% if "professor_logado" in session %}
                                 <div class="card">
-                                    <a href="/criarBD">Criar Banco de Dados</a>
+                                    <a href="/criarBD">Crie sua turma</a>
                                 </div>
                                 <div class="card">
                                     <a href="/enviar_mensagem">Enviar Mensagem</a>
                                 </div>
                                 <div class="card">
-                                    <a href="/professor/listarBD">Gerenciar Banco de Dados</a>
+                                    <a href="/professor/listarBD">Gerencie sua turma</a>
                                 </div>
                             {% endif %}
                         </div>
